--- a/package.json
+++ b/package.json
@@ -3,5 +3,7 @@
     "babel-jest": "^29.5.0",
     "coveralls": "^3.1.1",
     "jest": "^29.5.0"
-  }
+  },
+  "test-ci": "jest --config config.json --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+
 }
